Fixed pin visibility issue, made several styling improvements

--- a/IDE/public/belaDiagram/css/diagramStyle.css
+++ b/IDE/public/belaDiagram/css/diagramStyle.css
@@ -22,7 +22,7 @@
   margin: 0;
   overflow: visible;
   padding-left: 0;
-  text-align: left;
+  text-align: center;
   width: 350px;
 }
 
