--- a/ide-redesign/styles/_tabs.scss
+++ b/ide-redesign/styles/_tabs.scss
@@ -36,7 +36,7 @@ $tab-width: 450px;
 }
 
 section#tab-content {
-  padding: 0 20px 20px 20px;
+  margin: 0 20px 20px 20px;
   .tab-info {
     display: none;
   }
